# Emo-UID

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  run.py  test.py  train.py
emouid/: __init__.py  config.py  functional.py  model.py  modules.py
examples/: __init__.py  forward_pass.py
tests/: test_model.py
