[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emouid"
version = "1.0.0"
description = "Manuscript-aligned Emo-UID model architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Emo-UID Authors"}]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
bert = ["transformers>=4.40,<5"]

[tool.setuptools.packages.find]
include = ["emouid*"]
